@@ -1,3 +1,9 @@
+2007-05-28  Jens Granseuer  <jensgr@gmx.net>
+
+	* theme-thumbnail.c: (generate_theme_thumbnail): drop unnecessary strlen
+	(generate_theme_thumbnail_async): save some casts
+	(generate_gtk_theme_thumbnail): don't leak the theme name
+
 2007-05-25  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-info.c: (read_icon_theme):
